--- a/apps/birdwatching/templates/index.html
+++ b/apps/birdwatching/templates/index.html
@@ -14,6 +14,8 @@
      Once you have your region selected you can press the the "statistics on region" button see the statistics of birdsightings
      on that reigion.</p>
 
+  <button class="button is-primary" @click="enterChecklist">enter checklist</button>
+  
   <div id="map"></div>
 
   <p>You can select what species are shown on the map.</p>
