--- a/apps/birdwatching/templates/checklist.html
+++ b/apps/birdwatching/templates/checklist.html
@@ -1,15 +1,13 @@
 [[extend 'layout.html']]
 
-<div class="section" id="app" v-cloak>
+<div class="section" id="app">
     <!-- Put here your Vue.js template -->
-    <h1 class="title">Checklist</h1>
+    <h1 class="title">Checklist for (location here)</h1>
+    <button class="button is-primary" @click="goToMyChecklists">My Checklists</button>
 </div>
 
 
 [[block page_scripts]]
-<!-- Loads the index-specific js for Vue
-<script>
-  let my_callback_url = "[[=XML(my_callback_url)]]";
-</script>
-<script src="js/index.js"></script> -->
+<!-- Loads the index-specific js for Vue -->
+<script src="js/checklist.js"></script>
 [[end]]
