--- a/apps/birdwatching/templates/checklist.html
+++ b/apps/birdwatching/templates/checklist.html
@@ -2,8 +2,9 @@
 
 <div class="section" id="app">
     <!-- Put here your Vue.js template -->
-    <h1 class="title">Checklist for (location here)</h1>
+    <h1 class="title">Checklist</h1>
     <button class="button is-primary" @click="goToMyChecklists">My Checklists</button>
+    <button class="button is-primary" @click="goToIndex">Index</button>
 </div>
 
 
