--- a/apps/birdwatching/templates/index.html
+++ b/apps/birdwatching/templates/index.html
@@ -2,63 +2,57 @@
 
 <style>
 [v-cloak] {
-     display: none;
+    display: none;
 }
 </style>
 
-
 <div class="section" id="app" v-cloak>
-  <!-- Put here your Vue.js template -->
-  <h1 class="title">Index</h1>
+    <!-- Put here your Vue.js template -->
+    <h1 class="title">Index</h1>
 
-  <h2>Navigation</h2>
-  <button class="button is-primary" @click="enterChecklist">Checklist</button>
-  <br>
+    <h2>Navigation</h2>
+    <button class="button is-primary" @click="enterChecklist">Checklist</button>
+    <button class="button is-info" @click="enterLocation">Region Information</button>
+    <br>
 
-  <div class="container">
-    <p style="width:526px;">Welcome to birdwatching.html, to get started you can select a rectangular region on the map by clikcing two points.
-      Once you have your region selected you can press the the "statistics on region" button see the statistics of birdsightings
-      on that reigion.</p>
-  </div>
-  <br>
-  
-  <div class="container">
-    <div id="map"></div>
-  </div>
-  <br>
-
-  <div class="box">
-    <p>You can select what species are shown on the map. The map will only update after hovering over it again.</p>
-    <p>You selected species:</p>
-    <ul>
-      <li v-for="name in selectedCNames">{{name}}<i class="delete-button has-text-danger fa fa-trash" @click="deleteSelectedSpecies(name)"></i></li>
-    </ul>
-    <input class="input" type="text" placeholder="Enter a Common Name" v-model='searchCName' @input="filterCommonNames()" @focus="displaySuggestions = true"></input>
-    <div v-if="filteredCNames && displaySuggestions">
-      <ul>
-        <li v-for="cName in filteredCNames" @click="setSeachCName(cName)">
-          <button class="button is-white" @click="editSelectedSpecies(cName)">
-            {{cName}}
-          </button>
-        </li>
-      </ul>
+    <div class="container">
+        <p style="width:526px;">Welcome to birdwatching.html, to get started you can select a rectangular region on the map by clicking two points.
+            Once you have your region selected you can press the "statistics on region" button to see the statistics of bird sightings
+            in that region.</p>
     </div>
-  </div>
-  
+    <br>
+
+    <div class="container">
+        <div id="map"></div>
+    </div>
+    <br>
+
+    <div class="box">
+        <p>You can select what species are shown on the map. The map will only update after hovering over it again.</p>
+        <p>You selected species:</p>
+        <ul>
+            <li v-for="name in selectedCNames">{{ name }}<i class="delete-button has-text-danger fa fa-trash" @click="deleteSelectedSpecies(name)"></i></li>
+        </ul>
+        <input class="input" type="text" placeholder="Enter a Common Name" v-model="searchCName" @input="filterCommonNames()" @focus="displaySuggestions = true"></input>
+        <div v-if="filteredCNames && displaySuggestions">
+            <ul>
+                <li v-for="cName in filteredCNames" @click="setSeachCName(cName)">
+                    <button class="button is-white" @click="editSelectedSpecies(cName)">
+                        {{ cName }}
+                    </button>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
-
-
-
-
 
 [[block page_scripts]]
 <!-- Loads the index-specific js for Vue -->
 <script>
-  let load_data_url = "[[=XML(load_data_url)]]";
+    let load_data_url = "[[=XML(load_data_url)]]";
 </script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"></script>
 <script src="js/index.js"></script>
 <script src="js/leaflet-heat.js"></script>
-
 [[end]]
