--- a/apps/birdwatching/templates/user_stats.html
+++ b/apps/birdwatching/templates/user_stats.html
@@ -3,14 +3,18 @@
 <div class="section" id="app">
     <h1 class="title is-2">User Stats</h1>
 </div>
-  
-  
+
+<div class="container">
+  <p> Last 30 Spotted Species </p>
+  <div id="map"></div>
+</div>
 
 [[block page_scripts]]
   <!-- Loads the index-specific js for Vue -->
   <script>
+    let load_user_stats_url = "[[=XML(load_user_stats_url)]]";
     let get_species_url = "[[=XML(get_species_url)]]";
-    let submit_checklist_url = "[[=XML(submit_checklist_url)]]"
+    let submit_checklist_url = "[[=XML(submit_checklist_url)]]";
   </script>
   <script src="js/user_stats.js"></script>
 [[end]]
