created get_user_species endpoint

--- a/apps/birdwatching/templates/user_stats.html
+++ b/apps/birdwatching/templates/user_stats.html
@@ -27,6 +27,7 @@
     let load_user_stats_url = "[[=XML(load_user_stats_url)]]";
     let get_species_url = "[[=XML(get_species_url)]]";
     let submit_checklist_url = "[[=XML(submit_checklist_url)]]";
+    let get_user_species_url = "[[=XML(get_user_species_url)]]";
   </script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="js/user_stats.js"></script>
