count working user_stats

--- a/apps/birdwatching/templates/user_stats.html
+++ b/apps/birdwatching/templates/user_stats.html
@@ -12,15 +12,31 @@
         <div class="columns">
             <div class="column is-half">
                 <h2 class="subtitle">Species Seen</h2>
-                <input v-model="searchCName" @input="filterSpecies" placeholder="Search for a species..." class="input">
-                <ul>
-                    <li v-for="species in filteredCNames" :key="species.name">{{ species.name }} ({{ species.count }})</li>
-                </ul>
+                <input v-model="searchCName" @input="filterSpecies" placeholder="Search for a species..." class="input mb-2" v-if="speciesData.length > 0">
+                <div style="max-height: 400px; overflow-y: auto;">
+                    <table class="table is-fullwidth is-striped" v-if="speciesData.length > 0">
+                        <thead>
+                            <tr>
+                                <th>Species Name</th>
+                                <th>Count</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="species in filteredCNames" :key="species.name">
+                                <td>{{ species.name }}</td>
+                                <td>{{ species.count }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p v-else>No species seen yet.</p>
+                </div>
             </div>
             <div class="column is-half">
                 <h2 class="subtitle">Species Sightings Chart</h2>
-                <canvas id="speciesChart"></canvas>
+                <canvas id="speciesChart" v-if="speciesData.length > 0"></canvas>
+                <p v-else>No data to display.</p>
             </div>
+        </div>
         </div>
     </div>
 </div>
