--- a/apps/birdwatching/templates/location.html
+++ b/apps/birdwatching/templates/location.html
@@ -52,7 +52,7 @@
     <br>
 
     <div class="container">
-        <p>Welcome to the Location Statistics page. Here you can see the details of bird sightings in a selected region.</p>
+        <p>Welcome to the Location Statistics page. Here you can see the details of bird sightings in a selected region. Click a species on the list to see the graph for sightings over time.</p>
     </div>
     <br>
 
@@ -64,7 +64,7 @@
                     <thead>
                         <tr>
                             <th>Species</th>
-                            <th>Count</th>
+                            <th># of Sightings</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -96,7 +96,7 @@
                 <thead>
                     <tr>
                         <th>Contributor</th>
-                        <th>Count</th>
+                        <th># Contributions</th>
                     </tr>
                 </thead>
                 <tbody>
